# mv7ctl

./: .gitignore  99-shure-mv7.rules  Cargo.toml  LICENSE.md  README.md  flake.nix
src/: cli.rs  main.rs  mv7.rs
